# rpa_challenge

./: README.md  automation.py  pyproject.toml  summary.md
rpa_challenge/: data_extraction.py  data_post.py
tests/: test_rpa_challenge.py
