[tool.poetry]
name = "rpa_challenge"
version = "0.1.0"
description = ""
authors = ["Renan Moura <rvmoura.96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
html5lib = "^1.1"
httpx = "^0.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
